# ScratchSync

./: LICENSE.md  README.md  __init__.py  cloud_operations.py  pyproject.toml  scratch_client.py  scratch_project.py  setup.py  test_scratchsync.py
.github/workflows/: python-publish.yml
ScratchSync/: login.py  scratch_client.py  scratch_project.py  utils.py
