[project]
name = "scratchsync"
version = "0.1.0"
description = "A Python library to sync with Scratch projects, profiles, and data."
authors = [
    { name="kRxZykRxZy", email="kRxZykRxZy@crazycloud.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["scratch", "api", "sync", "scratch.mit.edu", "scratchsync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]

[project.urls]
"Homepage" = "https://github.com/kRxZykRxZy/ScratchSync"
"Bug Tracker" = "https://github.com/kRxZykRxZy/ScratchSync/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
